After refactoring all tests run.